--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ Type='bcl'
 
 # Local Configuration
 IS_DDB_LOCAL = true
-SERVICE = 'aws-nestjs-fundcost-api'
+SERVICE = 'cost-of-fund'
 STAGE = 'dev'
 REGION = 'us-east-1'
 PORT=3000
