--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "printWidth": 80,
+  "printWidth": 120,
   "tabWidth": 2,
   "trailingComma": "all",
   "singleQuote": true,
-  "semi": true,
+  "semi": false,
+  "arrowParens": "avoid",
   "importOrder": [
     "^@nestjs(.*)$",
     "^@modules/(.*)$",
