--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aws-nestjs-starter",
+  "name": "cost-of-fund",
   "version": "0.0.1",
-  "description": "Fund Cost's Api Rest",
+  "description": "Cost of Fund's Api Rest",
   "author": "Vveral",
   "license": "MIT",
   "scripts": {
@@ -64,11 +64,11 @@
     "@types/serverless": "3.12.13",
     "@types/supertest": "2.0.12",
     "@types/uuid": "9.0.2",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "change-case": "4.1.2",
     "cross-env": "7.0.3",
-    "eslint": "8.44.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "glob-promise": "6.0.3",
