--- a/.env
+++ b/.env
@@ -13,6 +13,6 @@ ACCESSKEYID='vveral'
 SECRETACCESSKEY='vveral'
 
 # SERVICE CONFIG
-TITLE='Funds of Cost'
+TITLE='Cost of Fund'
 COMPONENT="NestJS: 0.0.1"
 APP_ID=1
