--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ STAGE = 'dev'
 REGION = 'us-east-1'
 PORT=3000
 API_PREFIX='v1'
-LISTEN_ADDRESS='localhost'
+LISTEN_ADDRESS='10.156.248.44'
 ACCESSKEYID='vveral'
 SECRETACCESSKEY='vveral'
 
