Ajustes Dockerizado Red

--- a/.env
+++ b/.env
@@ -2,15 +2,17 @@ ENVIRONMENT='dev'
 Type='bcl'
 
 # Local Configuration
-IS_DDB_LOCAL = true
-SERVICE = 'cost-of-fund'
-STAGE = 'dev'
-REGION = 'us-east-1'
+IS_DDB_LOCAL=true
+SERVICE='cost-of-fund'
+STAGE='dev'
 PORT=3000
 API_PREFIX='v1'
-LISTEN_ADDRESS='10.156.248.44'
-ACCESSKEYID='vveral'
-SECRETACCESSKEY='vveral'
+LISTEN_ADDRESS="localhost"
+# AWS Config
+REGION="us-east-1"
+ACCESSKEYID="vveral"
+SECRETACCESSKEY="vveral"
+URL_DYNAMODB="http://dynamodb-local:8000"
 
 # SERVICE CONFIG
 TITLE='Cost of Fund'
