--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "luxon": "^3.3.0",
     "nestjs-dynamoose": "0.5.5",
     "nestjs-pino": "^3.3.0",
+    "pino-pretty": "^10.2.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
     "rxjs": "7.8.1",
@@ -60,7 +61,7 @@
     "@types/jest": "29.5.3",
     "@types/js-yaml": "4.0.5",
     "@types/luxon": "^3.3.0",
-    "@types/node": "16.18.38",
+    "@types/node": "^16.18.38",
     "@types/serverless": "3.12.13",
     "@types/supertest": "2.0.12",
     "@types/uuid": "9.0.2",
