--- a/.env
+++ b/.env
@@ -2,19 +2,18 @@ ENVIRONMENT='dev'
 Type='bcl'
 
 # Local Configuration
-IS_DDB_LOCAL=true
-SERVICE='cost-of-fund'
-STAGE='dev'
+IS_DDB_LOCAL = true
+SERVICE = 'cost-of-fund'
+STAGE = 'dev'
+REGION = 'us-east-2'
 PORT=3000
 API_PREFIX='v1'
-LISTEN_ADDRESS="localhost"
-# AWS Config
-REGION="us-east-1"
-ACCESSKEYID="vveral"
-SECRETACCESSKEY="vveral"
-URL_DYNAMODB="http://dynamodb-local:8000"
+LISTEN_ADDRESS='localhost'
+ACCESSKEYID='AKIAZ42BO23JA7Z6JFP7'
+SECRETACCESSKEY='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'
 
 # SERVICE CONFIG
 TITLE='Cost of Fund'
 COMPONENT="NestJS: 0.0.1"
 APP_ID=1
+
