--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ REGION = 'us-east-2'
 PORT=3000
 API_PREFIX='v1'
 LISTEN_ADDRESS='localhost'
-ACCESSKEYID='AKIAZ42BO23JA7Z6JFP7'
-SECRETACCESSKEY='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'
+ACCESSKEYID='vveral'
+SECRETACCESSKEY='vveral'
 
 # SERVICE CONFIG
 TITLE='Cost of Fund'
